third_party/move/move-compiler-v2/tests/lambda/inline-parity/multi_param.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/multi_param.move:19:29
   │
19 │           for_each_ref_mut(v, |elem| {
   │ ╭─────────────────────────────^
20 │ │             let elem: &mut Elem<K, V> = elem; // Checks whether scoping is fine
21 │ │             result = result + f(&elem.k, &mut elem.v);
22 │ │         });
   │ ╰─────────^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/multi_param.move:27:64
   │
27 │         assert!(elem_for_each_ref(&mut vector[Elem{k:1, v:2}], |x,y| *x + *y) == 3, 0)
   │                                                                ^^^^^^^^^^^^^
